--- a/requirements/edx/paver.in
+++ b/requirements/edx/paver.in
@@ -21,7 +21,7 @@ psutil==1.2.1                       # Library for retrieving information on runn
 pymongo==2.9.1                      # via edx-opaque-keys
 python-memcached==1.48              # Python interface to the memcached memory cache daemon
 requests                            # Simple interface for making HTTP requests
-stevedore==1.10.0                   # via edx-opaque-keys
+stevedore                           # # Support for runtime plugins, used for XBlocks and edx-platform Django app plugins
 watchdog                            # Used in paver watch_assets
 wrapt==1.10.5                       # Decorator utilities used in the @timed paver task decorator
 
